syntax = "proto3";

package pb;

import "contact.proto";
import "section.proto";

message UnlockedDocument {
  string id = 1;
  bytes public_key = 2;
  string name = 3;
  map<string, UnlockedSection> sections = 4;
}

message LockedDocument {
  string id = 1;
  bytes public_key = 2;
  string name = 3;
  map<string, LockedContact> contacts = 4;
  map<string, LockedSection> sections = 5;
  bytes signature = 6;
}
