syntax = "proto3";

package pb;

message UnlockedSection {
  string name = 1;
  repeated string member_ids = 2;
  bytes content_key = 3;
}

message LockedSection {
  bytes encrypted = 1;
}
